Support Spark 4.0.x and Spark 4.1.x. Fix #2946 commit_hash:895ad2b899ed2b1aac5ac8d27a18175ed163ea2f